fixed main layout bug

--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@ main {
     height: 75vh;
     background: skyblue;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 main section:nth-of-type(1) {
